Создал тестовую БД до квартир включительно. На сайте до корпусов включительно

--- a/views/floors.hbs
+++ b/views/floors.hbs
@@ -1,9 +1,9 @@
 <main>
     <div class="wrapper">
         {{!-- {{> search}} --}}
-        {{#if corpuses.length}}
+        {{#if floors.length}}
             <ul class="projects">
-            {{#each corpuses}}
+            {{#each floors}}
                 <li class="element_item project_item">
                     <div class="project">
                         <div class="line line_project_name">
@@ -13,7 +13,7 @@
                                         <circle cx="12" cy="12" r="8"></circle>
                                     </svg>
                                 </div>
-                                 <div class="project_name_text">{{dataValues.name}}</div>
+                                 <div class="project_name_text">{{floors}}</div>
                             </div>
                             
                             <svg class="building_img">
@@ -22,7 +22,7 @@
                         </div>
                         <div class="line_select line_select_project">
                             <button class="btn_select btn_select_project">
-                                <a href="/floors/{{dataValues.id}}">
+                                <a href="/unit/{{corpus_id}}/{{floors}}">
                                     <svg class="svg_select svg_select_project">
                                         <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path>
                                     </svg> 
