--- a/views/queues.hbs
+++ b/views/queues.hbs
@@ -1,6 +1,6 @@
 <main>
     <div class="wrapper">
-        {{> search}}
+        {{!-- {{> search}} --}}
         {{#if queues.length}}
             <ul class="projects">
             {{#each queues}}
@@ -22,7 +22,7 @@
                         </div>
                         <div class="line_select line_select_project">
                             <button class="btn_select btn_select_project">
-                                <a href="./corpuses">
+                                <a href="/corpuses/{{dataValues.id}}">
                                     <svg class="svg_select svg_select_project">
                                         <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path>
                                     </svg> 
@@ -34,7 +34,7 @@
             {{/each}}
             </ul>
         {{else}}
-            <p>Нет очередей или этапов</p>
+            <p>Нет доступных квартир</p>
         {{/if}}
         </ul>
     </div>
