--- a/views/units.hbs
+++ b/views/units.hbs
@@ -1,6 +1,6 @@
 <main>
     <div class="wrapper">
-        {{> search}}
+        {{!-- {{> search}} --}}
         {{#if units.length}}
             <ul>
                 {{#each units}}
