Определяются уникальные этажи для отображения на сайте

--- a/views/floors.hbs
+++ b/views/floors.hbs
@@ -13,7 +13,7 @@
                                         <circle cx="12" cy="12" r="8"></circle>
                                     </svg>
                                 </div>
-                                 <div class="project_name_text">{{floors}}</div>
+                                 <div class="project_name_text">{{number}} этаж</div>
                             </div>
                             
                             <svg class="building_img">
@@ -22,7 +22,7 @@
                         </div>
                         <div class="line_select line_select_project">
                             <button class="btn_select btn_select_project">
-                                <a href="/unit/{{corpus_id}}/{{floors}}">
+                                <a href="/unit/{{corpus_id}}/{{number}}">
                                     <svg class="svg_select svg_select_project">
                                         <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path>
                                     </svg> 
